[package]
name = "cln-rdr"
version = "0.1.0"
edition = "2024"
authors = ["Peter Neuroth <pet.v.ne@gmail.com>"]

rust-version = "1.85"

description = "CLI for calling Core Lightning Commando RPCs over lnsocket."
readme = "README.md"
license = "MIT"

repository = "https://github.com/nepet/cln-rdr"
homepage = "https://github.com/nepet/cln-rdr"
documentation = "https://docs.rs/cln-rdr"

keywords = ["lightning", "cln", "commando", "lnsocket", "bitcoin"]
categories = ["command-line-utilities", "network-programming"]

include = [
  "src/**",
  "README.md",
  "LICENSE",
  "Cargo.toml",
]

[[bin]]
name = "rdr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lnsocket = "0.5.2"
serde_json = "1"
